unpackaged/main/default/objects/Call_Targets__c/Call_Targets__c.object-meta.xml
<CustomObject>
    <description>Call targets for Account Managers.</description>
    <label>Call Targets</label>
    <nameField>
        <displayFormat>CT-{000}</displayFormat>
        <label>Call Target ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Targets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>