unpackaged/main/default/objects/Call_Targets__c/fields/Any_Target__c.field-meta.xml
<CustomField>
    <fullName>Any_Target__c</fullName>
    <description>Target for followups or type Phone / In Store- TC / Out of store in any combination</description>
    <label>Any</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>