unpackaged/main/default/objects/Call_Targets__c/fields/In_Store_TC_Target__c.field-meta.xml
<CustomField>
    <fullName>In_Store_TC_Target__c</fullName>
    <description>Target for follow ups in store / trade centers</description>
    <label>In Store/TC</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>