unpackaged/main/default/objects/Call_Targets__c/fields/Out_of_Store_Target__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Store_Target__c</fullName>
    <description>Target for followup out of store</description>
    <label>Out of Store</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>