unpackaged/main/default/objects/Call_Targets__c/fields/Phone_Target__c.field-meta.xml
<CustomField>
    <fullName>Phone_Target__c</fullName>
    <description>Target for follow ups using phone</description>
    <label>Phone</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>