unpackaged/main/default/objects/Call_Targets__c/fields/Total_Target__c.field-meta.xml
<CustomField>
    <fullName>Total_Target__c</fullName>
    <formula>Phone_Target__c + In_Store_TC_Target__c + Out_of_Store_Target__c + Any_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>