unpackaged/main/default/objects/Call_Targets__c/recordTypes/AU_Call_Target.recordType-meta.xml
<RecordType>
    <fullName>AU_Call_Target</fullName>
    <active>true</active>
    <description>Call target for Australian AMs</description>
    <label>AU Call Target</label>
</RecordType>