unpackaged/main/default/objects/Call_Targets__c/recordTypes/NZ_Call_Target.recordType-meta.xml
<RecordType>
    <fullName>NZ_Call_Target</fullName>
    <active>true</active>
    <description>Call target for New Zealand AMs</description>
    <label>NZ Call Target</label>
</RecordType>