unpackaged/main/default/objects/Call_Targets__c/validationRules/End_Date_Greater_Than_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Greater_Than_Start_Date</fullName>
    <active>true</active>
    <description>End Date Greater Than Start Date</description>
    <errorConditionFormula>AND(
!ISBLANK( End_Date__c ),
Start_Date__c &gt;= End_Date__c
)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date must be greater than Start Date.</errorMessage>
</ValidationRule>