unpackaged/main/default/objects/Call_Targets__c/validationRules/Start_Date_in_The_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_in_The_Future</fullName>
    <active>true</active>
    <description>The user cannot set the start date to be in the past</description>
    <errorConditionFormula>(ISNEW() || ISCHANGED(Start_Date__c) ) &amp;&amp; Start_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>You cannot create a target with a start date in the past</errorMessage>
</ValidationRule>