unpackaged/main/default/objects/Call_Targets__c/validationRules/Start_Date_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_is_Mandatory</fullName>
    <active>true</active>
    <description>Start Date is Mandatory</description>
    <errorConditionFormula>ISBLANK( Start_Date__c )</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start Date is Mandatory</errorMessage>
</ValidationRule>