unpackaged/main/default/objects/Call_Targets__c/validationRules/Team_Member_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Team_Member_is_Mandatory</fullName>
    <active>true</active>
    <description>Team Member is Mandatory</description>
    <errorConditionFormula>ISBLANK( Team_Member__c )</errorConditionFormula>
    <errorDisplayField>Team_Member__c</errorDisplayField>
    <errorMessage>Team Member is Mandatory</errorMessage>
</ValidationRule>