unpackaged/main/default/objects/Call_Targets__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Team_Member__c</columns>
    <columns>Phone_Target__c</columns>
    <columns>In_Store_TC_Target__c</columns>
    <columns>Out_of_Store_Target__c</columns>
    <columns>Any_Target__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>