unpackaged/main/default/objects/Call_Targets__c/listViews/My_Team.listView-meta.xml
<ListView>
    <fullName>My_Team</fullName>
    <columns>NAME</columns>
    <columns>Team_Member__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Phone_Target__c</columns>
    <columns>In_Store_TC_Target__c</columns>
    <columns>Out_of_Store_Target__c</columns>
    <columns>Any_Target__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Team</label>
</ListView>